@@ -1,7 +1,5 @@
 package com.verdantartifice.primalmagick.client.gui.grimoire;
 
-import com.mojang.blaze3d.platform.GlStateManager;
-import com.mojang.blaze3d.systems.RenderSystem;
 import com.verdantartifice.primalmagick.client.gui.GrimoireScreen;
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.IngredientWidget;
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.ItemStackWidget;
@@ -9,6 +7,7 @@ import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.ManaCostSumm
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.RecipeTypeWidget;
 import com.verdantartifice.primalmagick.common.crafting.IDissolutionRecipe;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.renderer.RenderPipelines;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
@@ -56,7 +55,7 @@ public class DissolutionRecipePage extends AbstractRecipePage {
         screen.addWidgetToScreen(new RecipeTypeWidget(this.recipe.value(), x - 22 + (side * 140) + (indent / 2) - (overlayWidth / 2), y + 30, Component.translatable(this.getRecipeTypeTranslationKey())));
 
         // Render ingredient stacks
-        screen.addWidgetToScreen(new IngredientWidget(this.recipe.value().getIngredients().get(0), x - 5 + (side * 140) + (indent / 2) - (overlayWidth / 2) + 32, y + 67 + 27, screen));
+        screen.addWidgetToScreen(new IngredientWidget(this.recipe.value().placementInfo().ingredients().getFirst(), x - 5 + (side * 140) + (indent / 2) - (overlayWidth / 2) + 32, y + 67 + 27, screen));
     }
 
     @Override
@@ -68,16 +67,11 @@ public class DissolutionRecipePage extends AbstractRecipePage {
         int overlayWidth = 46;
         int overlayHeight = 46;
         
-        RenderSystem.enableBlend();
-        RenderSystem.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
-        
         // Render overlay background
-        guiGraphics.pose().pushPose();
-        RenderSystem.enableBlend();
-        RenderSystem.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
-        guiGraphics.pose().translate(x - 6 + (side * 140) + (indent / 2), y + 49 + (overlayHeight / 2), 0.0F);
-        guiGraphics.pose().scale(2.0F, 2.0F, 1.0F);
-        guiGraphics.blit(OVERLAY, -(overlayWidth / 2), -(overlayHeight / 2), 97, 0, overlayWidth, overlayHeight);
-        guiGraphics.pose().popPose();
+        guiGraphics.pose().pushMatrix();
+        guiGraphics.pose().translate(x - 6 + (side * 140) + (indent / 2), y + 49 + (overlayHeight / 2));
+        guiGraphics.pose().scale(2.0F, 2.0F);
+        guiGraphics.blit(RenderPipelines.GUI_TEXTURED, OVERLAY, -(overlayWidth / 2), -(overlayHeight / 2), 97, 0, overlayWidth, overlayHeight, 256, 256);
+        guiGraphics.pose().popMatrix();
     }
 }
